# nemotron-kaggle-comp

./: .gitignore  README.md  main.py  pyproject.toml
nemotron-submission-pipeline/: README.md  docker-compose.yml
nemotron-submission-pipeline/build_nvidia_dsl/: Dockerfile  build.py
nemotron-submission-pipeline/main_submission_notebook/: Dockerfile  build.py  submission_generator.py
