[project]
name = "nemotron-kaggle-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "mamba-ssm>=2.3.1",
    "nvidia-cutlass>=4.2.0.0",
    "polars>=1.39.3",
    "sentence-transformers>=5.3.0",
]

[tool.uv.workspace]
members = [
    "nemotron-submission-pipeline/main_submission_notebook",
]
